# fairseq

./: pyproject.toml  setup.py
examples/simultaneous_translation/tests/: test_alignment_train.py
fairseq/: __init__.py
fairseq/models/wav2vec/: wav2vec2_asr.py
